--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -1,9 +1,13 @@
 \chapter{Topological Multiferroic switching; coupling between Magnetism and Ferroelectricity in GdMn2O5}
 \section{Introduction}
-Multiferroic materials, where there are multiple ordered structures, have been studied intensely in recent times. The first reason for this is that these orders are usually coupled to some degree, allowing the indirect manipulation of one order by an external perturbation applied to the other. Secondly, this coupling enables a wealth of physical processes to be observed in these materials. Especially materials with relatively low symmetry are a veritable playground to study different effects. In the case under present scrutiny, GdMn2O5, the magnetic configuration that is present in the system breaks inversion symmetry and leads to a small ferroelectric polarization to show up. With an externally applied magnetic field, we can influence the magnetic order and in turn change the ferroelectric polarization through magnetostriction. Experiments have previously shown exactly this effect, but what was previously missed, is that depending on the angle of the applied magnetic field there are three distinguishable switching regimes. As will be discussed later two of these three regimes can be regarded as two topologically trivial extremes, whereas the third one that lives in the crossover region between these two orders can be regarded as topologically non-trivial in the same sense as a Thouless pump.
+Multiferroic materials, where there are multiple ordered structures, have been studied intensely in recent times. The first reason for this is that these orders are usually coupled to some degree, allowing the indirect manipulation of one order by an external perturbation applied to the other. Secondly, this coupling enables a wealth of physical processes to be observed in these materials. Especially materials with relatively low symmetry are a veritable playground to study different effects. In the case under present scrutiny, GdMn$_2$O$_5$, the magnetic configuration that is present in the system breaks inversion symmetry and leads to a small ferroelectric polarization to show up. With an externally applied magnetic field, we can influence the magnetic order and in turn change the ferroelectric polarization through magnetostriction. Experiments have previously shown exactly this effect, but what was previously missed, is that depending on the angle of the applied magnetic field there are three distinguishable switching regimes. As will be discussed later two of these three regimes can be regarded as two topologically trivial extremes, whereas the third one that lives in the crossover region between these two orders can be regarded as topologically non-trivial in the same sense as a Thouless pump.
 
 \section{GdMn$_2$O$_5$}
-Before describing the underlying theory to describe the processes that happen in GdMn$_2$O$_5$, we focus for a moment on the magnetic unit cell shown in Fig.~\ref{fig:GdMn2O5_unit_cell}. There are two differently oriented chains of Manganese atoms, distinguished by the light blue lines and polygons. Inside these chains there are both tetrahedrally coordinated (Mn$^{3+}$) and octahedrally coordinated (Mn$^{4+}$) manganese atoms. Due to the Goodenough-Kanamori rules\lp{citation!} these chains are strongly coupled AFM, leading us to assign one AFM order parameter for each ($L_1$ and $L_2$), this amounts to taking the rigid spin approximation in each chain. However, due to the same rules, the chains also couple AFM between eachother. When considering the Mn pentagons formed by the two chains around each of the Gd atoms, it becomes clear that there is a magnetic frustration in the system. This will cause the chains to cant a little to be more perpendicular to eachother which can then lead to an energy gain through small canting. This frustration breaks inversion symmetry and leads to the first contribution to the ferroelectric polarization through magnetostriction. However, due to the spins of the Gd atoms, and their strong AFM coupling to the surrounding Mn atoms, there is a second contribution to the ferroelectricity. This happens because the Gd atom will move towards the closest tetrahedrally coordinated Mn atom in an effort to optimize the super-exchange energy gain with it. These two contributions add up to a polarization of around 3600 $\mu C/cm^2$, which is tiny compared to proper ferroelectrics, but enormous for multiferroics. Lastly due to the size of the spin from the half-filled f-shell Gd atoms (nominally $S=\frac{7}{2}$), dipolar effects may play a role, and each of the Gd spins inside the unit cell need to be considered separately. 
+Before describing the underlying theory to describe the processes that happen in GdMn$_2$O$_5$, we focus first on the symmetries that govern the magnetic configuration and which lead to the multiferroicity.
+
+Orthorhombic manganites $R$Mn$_2$O$_5$, with $R$ being one of the rare earth elements, all have space group $Pbam$ \cite{Alfonso97a}. Two nonequivalent Mn chains can be distinguished, harboring octahedrally coordinated Mn$^{4+}$ and pyramidally coordinated Mn$^{3+}$ ions. The localized spins on these ions couple strongly AFM 
+
+As is shown in Fig.~\ref{fig:GdMn2O5_unit_cell}   GdMn$_2$O$_5$ for a moment on the magnetic unit cell shown in . There are two differently oriented chains of Manganese atoms, distinguished by the light blue lines and polygons. Inside these chains there are both tetrahedrally coordinated (Mn$^{3+}$) and octahedrally coordinated (Mn$^{4+}$) manganese atoms. Due to the Goodenough-Kanamori rules\lp{citation!} these chains are strongly coupled AFM, leading us to assign one AFM order parameter for each ($L_1$ and $L_2$), this amounts to taking the rigid spin approximation in each chain. However, due to the same rules, the chains also couple AFM between eachother. When considering the Mn pentagons formed by the two chains around each of the Gd atoms, it becomes clear that there is a magnetic frustration in the system. This will cause the chains to cant a little to be more perpendicular to eachother which can then lead to an energy gain through small canting. This frustration breaks inversion symmetry and leads to the first contribution to the ferroelectric polarization through magnetostriction. However, due to the spins of the Gd atoms, and their strong AFM coupling to the surrounding Mn atoms, there is a second contribution to the ferroelectricity. This happens because the Gd atom will move towards the closest tetrahedrally coordinated Mn atom in an effort to optimize the super-exchange energy gain with it. These two contributions add up to a polarization of around 3600 $\mu C/cm^2$, which is tiny compared to proper ferroelectrics, but enormous for multiferroics. Lastly due to the size of the spin from the half-filled f-shell Gd atoms (nominally $S=\frac{7}{2}$), dipolar effects may play a role, and each of the Gd spins inside the unit cell need to be considered separately. 
 \begin{figure}
 	\IncludeGraphics{unit_cell}
 	\caption{\label{fig:GdMn2O5_unit_cell}}
