--- a/papers/GdMn2O5/bib.bib
+++ b/papers/GdMn2O5/bib.bib
@@ -2096,4 +2096,17 @@ eprint = {https://doi.org/10.1063/1.5120971}
   url = {https://link.aps.org/doi/10.1103/PhysRevB.27.6083}
 }
 
+@article{Khannanov2014,
+abstract = {Polarization, dielectric permittivity, and low-frequency magnetic dynamics (30 – 50 GHz) of GdMn 2 O 5 are presented. The emergence of an abnormally high polarization along the b axis reported recently by N. Lee et al. is verified. It is found that this polarization is rigid and is observed in the internal field. Superlattices formed due to phase separation and charge carrier self-organization in the bulk of GdMn 2 O 5 the single crystals are revealed. The superlattices manifest themselves in the form of a set of ferromagnetic resonances which are responses of individual superlattice layers. A weak polarization along the c axis at T ≤ 130 K caused by the superlattices is observed. The superlattices that occupy a small crystal volume are likely to be domain walls of the rigid bulk multiferroic domains. The correlation between magnetic structure, magnetic dynamics, and polarization in GdMn 2 O 5 is analyzed.},
+author = {Khannanov, B. Kh and Golovenchits, E. I. and Sanina, V. A.},
+doi = {10.1088/1742-6596/572/1/012046},
+file = {:home/ponet/Documents/Mendeley Desktop//Khannanov, Golovenchits, Sanina - 2014 - Giant polarization and magnetic dynamics in GdMn2O5(3).pdf:pdf},
+issn = {17426596},
+journal = {J. Phys. Conf. Ser.},
+number = {1},
+pages = {2--7},
+title = {{Giant polarization and magnetic dynamics in GdMn2O5}},
+volume = {572},
+year = {2014}
+}
 
