--- a/papers/Rashba/bib.bib
+++ b/papers/Rashba/bib.bib
@@ -29,6 +29,17 @@
     arxivId = {1308.0826}
 }
 
+@article{Meyer2008,
+archivePrefix = {arXiv},
+arxivId = {arXiv:cond-mat/0009288v2},
+author = {Meyer, B and Vanderbilt, David},
+eprint = {0009288v2},
+file = {:home/ponet/Documents/Mendeley Desktop/Meyer, Vanderbilt - 2001 - Ab initio study of BaTiO3 and PbTiO3 surfaces in external electric fields.pdf:pdf},
+primaryClass = {arXiv:cond-mat},
+title = {{Ab initio study of BaTiO 3 and PbTiO 3 surfaces in external electric fields}},
+year = {2008}
+}
+
 @article{Xu2013,
     title = {{Large-gap quantum spin Hall insulators in tin films.}},
     year = {2013},
