--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -15,9 +15,9 @@
 \usepackage{bm}
 % \usepackage{natbib}
 \usepackage{hyperref}
-\addbibresource{/home/ponet/Documents/PhD/Thesis/papers/GdMn2O5/bib.bib}
-\addbibresource{/home/ponet/Documents/PhD/Thesis/papers/Rashba/bib.bib}
-\addbibresource{/home/ponet/Documents/PhD/Thesis/papers/Softening/bib.bib}
+\addbibresource{./GdMn2O5/bib.bib}
+\addbibresource{./Rashba/bib.bib}
+\addbibresource{./Softening/bib.bib}
 
 %to be used in main text
 \newcommand{\ket}[1]{$\left|#1\right\rangle$}
